--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>Dang</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 
 <body class="page">
